--- a/composer.json
+++ b/composer.json
@@ -25,21 +25,21 @@
   "require": {
     "php": ">=5.4.0",
     "ext-intl": "*",
-    "yiisoft/yii2": "~2.0.0@dev",
+    "yiisoft/yii2": "2.0.*",
     "yiisoft/yii2-bootstrap": "~2.0",
     "yiisoft/yii2-swiftmailer": "~2.0",
     "yiisoft/yii2-authclient": "~2.0",
     "yiisoft/yii2-jui": "~2.0",
-    "asofter/yii2-imperavi-redactor": "dev-master@dev",
+    "2amigos/yii2-ckeditor-widget": "~1.0",
     "mihaildev/yii2-elfinder": "~1.0",
     "trntv/yii2-aceeditor": "~2.0",
     "trntv/probe": "@dev",
-    "trntv/yii2-file-kit": "~1.0.0",
+    "trntv/yii2-file-kit": "~1.0",
     "trntv/yii2-glide": "~1.0",
     "trntv/yii2-bootstrap-datetimepicker": "~1.0",
     "trntv/cheatsheet": "~0.1@dev",
     "intervention/image": "~2.1",
-    "vlucas/phpdotenv": "~1.0",
+    "vlucas/phpdotenv": "~1.1",
     "league/glide": "0.3.*",
     "bower-asset/admin-lte": "~2.0",
     "bower-asset/font-awesome": "~4.0",
