#425 Add recaptcha on frontend. Plugin loaded by composer, enviroment sets.

--- a/.env.dist
+++ b/.env.dist
@@ -33,3 +33,5 @@ FACEBOOK_CLIENT_SECRET = your-client-secret
 GLIDE_SIGN_KEY = <generated_key>
 GLIDE_MAX_IMAGE_SIZE = 4000000
 
+RECAPTCHA_SITE_KEY  = your-site-key
+RECAPTCHA_SECRET_KEY = your-secret-key
