--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "intervention/image": "^2.1",
     "vlucas/phpdotenv": "^2.0",
     "league/glide": "^0.3",
+    "himiklab/yii2-recaptcha-widget" : "*",
     "bower-asset/admin-lte": "^2.0",
     "bower-asset/font-awesome": "^4.0",
     "bower-asset/html5shiv": "^3.0",
