--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "vlucas/phpdotenv": "^2.0",
     "league/glide": "^0.3",
     "himiklab/yii2-recaptcha-widget" : "*",
+    "kartik-v/yii2-password": "@dev",
     "bower-asset/admin-lte": "^2.0",
     "bower-asset/font-awesome": "^4.0",
     "bower-asset/html5shiv": "^3.0",
