--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
     "bower-asset/html5shiv": "^3.0",
     "bower-asset/jquery-slimscroll": "^1.3",
     "bower-asset/flot": "^0.8",
-    "bower-asset/bootstrap-material-design": "~0.3"
+    "bower-asset/bootstrap-material-design": "~0.3",
+    "himiklab/yii2-sitemap-module" : "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "^2.0.0",
