--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,8 @@
     "trntv/yii2-datetime-widget": "^1.0.0",
     "trntv/yii2-tactician": "^0.1.0",
     "trntv/cheatsheet": "^0.1@dev",
+    "creocoder/yii2-taggable": "~2.0",
+    "2amigos/yii2-selectize-widget": "~1.0",
     "intervention/image": "^2.1",
     "vlucas/phpdotenv": "^2.0",
     "league/glide": "^0.3",
