Insert tags for articles, tags on frontend.

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "trntv/yii2-tactician": "^0.1.0",
     "trntv/cheatsheet": "^0.1@dev",
     "creocoder/yii2-taggable": "~2.0",
-    "2amigos/yii2-selectize-widget": "~1.0",
+    "kartik-v/yii2-widget-select2": "@dev",
+    "kartik-v/yii2-helpers": "dev-master",
     "intervention/image": "^2.1",
     "vlucas/phpdotenv": "^2.0",
     "league/glide": "^0.3",
