--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "yiisoft/yii2-swiftmailer": "^2.0.0",
     "yiisoft/yii2-authclient": "^2.0.0",
     "yiisoft/yii2-jui": "^2.0.0",
+    "yiisoft/yii2-redis": "^2.0.0",
     "2amigos/yii2-ckeditor-widget": "^1.0",
     "mihaildev/yii2-elfinder": "^1.0",
     "trntv/yii2-aceeditor": "^2.0",
