Prepare info command

--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,6 @@
     "issues": "https://github.com/sam002/yii2-starter-kit/issues?state=open",
     "source": "https://github.com/sam002/yii2-starter-kit"
   },
-  "repositories": [
-    {
-      "type": "path",
-      "url": "../../../yii2-acme"
-    }
-  ],
   "require": {
     "php": ">=5.5.0",
     "ext-intl": "*",
@@ -62,7 +56,7 @@
     "himiklab/yii2-sitemap-module" : "*",
     "sam002/yii2-otp" : "*",
     "symfony/process": "^3.0",
-    "sam002/yii2-acme": "dev-develop"
+    "sam002/yii2-acme": "^0.1"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "^2.0.0",
