Simple fixes, clean composer.json

--- a/composer.json
+++ b/composer.json
@@ -44,21 +44,21 @@
     "trntv/yii2-file-kit": "^1.0.0",
     "trntv/yii2-glide": "^1.0.0",
     "trntv/yii2-datetime-widget": "^1.0.0",
-    "trntv/cheatsheet": "^0.1@dev",
+    "trntv/cheatsheet": "^0.1",
     "trntv/yii2-command-bus": "^2.0",
     "creocoder/yii2-taggable": "~2.0",
-    "kartik-v/yii2-widget-select2": "@dev",
-    "kartik-v/yii2-helpers": "dev-master",
+    "kartik-v/yii2-widget-select2": "^2.0.8",
+    "kartik-v/yii2-helpers": "^1.3.5",
     "intervention/image": "^2.1",
     "vlucas/phpdotenv": "^2.0",
     "himiklab/yii2-recaptcha-widget" : "*",
-    "kartik-v/yii2-password": "@dev",
+    "kartik-v/yii2-password": "^1.5.3",
     "bower-asset/admin-lte": "^2.0",
     "bower-asset/font-awesome": "^4.0",
     "bower-asset/html5shiv": "^3.0",
     "bower-asset/jquery-slimscroll": "^1.3",
     "bower-asset/flot": "^0.8",
-    "bower-asset/bootstrap-material-design": "~0.3",
+    "bower-asset/bootstrap-material-design": "^0.5",
     "katech91/yii2-sitemap-module" : "^1.2.0",
     "sam002/yii2-otp" : "*",
     "symfony/process": "^3.0"
