--- a/.env.dist
+++ b/.env.dist
@@ -16,7 +16,7 @@ DB_TABLE_PREFIX  =
 
 TEST_DB_DSN           = mysql:host=localhost;port=3306;dbname=yii2-starter-kit
 TEST_DB_USERNAME      = root
-TEST_DB_PASSWORD      = root
+TEST_DB_PASSWORD      =
 
 # Urls
 # ----
