--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ cache:
 
 install:
   - travis_retry composer self-update && composer --version
-  - travis_retry composer global require "fxp/composer-asset-plugin:~1.1.0"
+  - travis_retry composer global require "fxp/composer-asset-plugin:~1.2.0"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer install --dev --prefer-dist --no-interaction
 # codeception
@@ -27,6 +27,7 @@ install:
 # setup application:
   - |
     cp .env.dist .env
+  - sed -i s/root/travis/ .env
     cp vhost.conf.dist vhost.conf
     sed -i s/yii2-starter-kit\.dev/localhost:8080/ .env
 
