Correct travis-ci yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
 # setup application:
   - |
     cp .env.dist .env
-  - sed -i s/root/travis/ .env
+    sed -i s/root/travis/ .env
     cp vhost.conf.dist vhost.conf
     sed -i s/yii2-starter-kit\.dev/localhost:8080/ .env
 
