--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
     "kartik-v/yii2-helpers": "^1.3.5",
     "intervention/image": "^2.1",
     "vlucas/phpdotenv": "^2.0",
-    "himiklab/yii2-recaptcha-widget" : "*",
+    "himiklab/yii2-recaptcha-widget" : "dev-master",
     "kartik-v/yii2-password": "^1.5.3",
     "bower-asset/admin-lte": "^2.0",
     "bower-asset/font-awesome": "^4.0",
