--- a/composer.json
+++ b/composer.json
@@ -68,6 +68,7 @@
     "yiisoft/yii2-debug": "^2.0.0",
     "yiisoft/yii2-gii": "^2.0.0",
     "yiisoft/yii2-codeception": "^2.0.0",
+    "codeception/codeception": "^2.2",
     "yiisoft/yii2-faker": "^2.0.0",
     "codeception/specify": "^0.4.3",
     "codeception/verify": "^0.3.0"
