--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
   - 7.0
+  - 7.1
 #  - hhvm
 
 # faster builds on new travis setup not using sudo
@@ -21,17 +21,13 @@ cache:
 install:
   - travis_retry phpenv config-rm xdebug.ini
   - travis_retry composer self-update && composer --version
-  - travis_retry composer global require "fxp/composer-asset-plugin:~1.2.0"
-  - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - travis_retry composer install --dev --prefer-dist --no-interaction
-# codeception
-  - travis_retry composer global require "codeception/codeception:^2.0" "codeception/specify" "codeception/verify"
+  - travis_retry composer global require "fxp/composer-asset-plugin:~1.2.0" "codeception/codeception:^2.0" "codeception/specify" "codeception/verify"
+  - travis_retry composer install --dev --prefer-source --no-interaction
 # setup application:
   - |
     cp .env.dist .env
-    sed -i s/root/travis/ .env
-    cp vhost.conf.dist vhost.conf
     sed -i s/yii2-starter-kit\.dev/localhost:8080/ .env
+    sed -i s/root/travis/ .env
 
   - |
     composer exec codecept build -- -c tests/codeception/common
