Backport travis config. Rever execution.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,19 +21,23 @@ cache:
 install:
   - travis_retry phpenv config-rm xdebug.ini
   - travis_retry composer self-update && composer --version
-  - travis_retry composer global require "fxp/composer-asset-plugin:~1.2.0" "codeception/codeception:^2.0" "codeception/specify" "codeception/verify"
-  - travis_retry composer install --dev --prefer-source --no-interaction
+  - travis_retry composer global require "fxp/composer-asset-plugin:~1.2.0"
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"
+  - travis_retry composer install --dev --prefer-dist --no-interaction
+# codeception
+  - travis_retry composer global require "codeception/codeception:^2.0" "codeception/specify" "codeception/verify"
 # setup application:
   - |
     cp .env.dist .env
-    sed -i s/yii2-starter-kit\.dev/localhost:8080/ .env
     sed -i s/root/travis/ .env
+    sed -i s/yii2-starter-kit\.dev/localhost:8080/ .env
 
   - |
-    composer exec codecept build -- -c tests/codeception/common
-    composer exec codecept build -- -c tests/codeception/backend
-    composer exec codecept build -- -c tests/codeception/frontend
-    composer exec codecept build -- -c tests/codeception/console
+    cd tests/codeception/backend && codecept build
+    cd ../common && codecept build
+    cd ../console && codecept build
+    cd ../frontend && codecept build
+    cd ../../../
 
 before_script:
   - mysql -e 'CREATE DATABASE `yii2-starter-kit`;';
