Backporting fix travis. Update composer.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ services:
 cache:
   directories:
     - $HOME/.composer/cache
+    - vendor
 
 install:
   - travis_retry phpenv config-rm xdebug.ini
@@ -33,11 +34,10 @@ install:
     sed -i s/yii2-starter-kit\.dev/localhost:8080/ .env
 
   - |
-    cd tests/codeception/backend && codecept build
-    cd ../common && codecept build
-    cd ../console && codecept build
-    cd ../frontend && codecept build
-    cd ../../../
+    codecept build -- -c tests/codeception/common
+    codecept build -- -c tests/codeception/backend
+    codecept build -- -c tests/codeception/frontend
+    codecept build -- -c tests/codeception/console
 
 before_script:
   - mysql -e 'CREATE DATABASE `yii2-starter-kit`;';
@@ -46,5 +46,7 @@ before_script:
 script:
   - |
     php -S localhost:8080 > /dev/null 2>&1 &
-    cd tests
-    ./../vendor/bin/codecept run --debug
+    codecept run -- -c tests/codeception/common
+    codecept run -- -c tests/codeception/backend
+    codecept run -- -c tests/codeception/frontend
+    codecept run -- -c tests/codeception/console
