--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /vendor
 composer.phar
 ## remove in production!
-#composer.lock
+composer.lock
 
 # IDE
 .idea
@@ -24,8 +24,10 @@ Thumbs.db
 phpunit.phar
 /phpunit.xml
 
-# Vagrant
+# Containers
 /.vagrant
 
+docker/nginx/vhost.conf
+
 # Tests
-tests/codeception/*/_support/_generated/*
+tests/codeception/*/_support
