--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "source": "https://github.com/sam002/yii2-starter-kit"
   },
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=7.0.0",
     "ext-intl": "*",
     "yiisoft/yii2": "^2.0.13",
     "yiisoft/yii2-bootstrap": "^2.0.0",
@@ -40,7 +40,7 @@
     "2amigos/yii2-ckeditor-widget": "^2.0",
     "mihaildev/yii2-elfinder": "^1.0",
     "trntv/yii2-aceeditor": "^2.0",
-    "trntv/probe": "^0.2",
+    "trntv/probe": "^1.0.0",
     "trntv/yii2-file-kit": "^1.0.0",
     "trntv/yii2-glide": "^1.0.0",
     "trntv/yii2-datetime-widget": "^1.0.0",
@@ -51,9 +51,9 @@
     "kartik-v/yii2-helpers": "^1.3.5",
     "intervention/image": "^2.1",
     "vlucas/phpdotenv": "^2.0",
-    "himiklab/yii2-recaptcha-widget" : "dev-master",
+    "himiklab/yii2-recaptcha-widget" : "^1.0.0",
     "kartik-v/yii2-password": "^1.5.3",
-    "bower-asset/admin-lte": "^2.0",
+    "almasaeed2010/adminlte": "^2.4.0",
     "bower-asset/font-awesome": "^4.0",
     "bower-asset/html5shiv": "^3.0",
     "bower-asset/jquery-slimscroll": "^1.3",
