--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "yiisoft/yii2-authclient": "^2.0.0",
     "yiisoft/yii2-jui": "^2.0.0",
     "yiisoft/yii2-redis": "^2.0.0",
-    "2amigos/yii2-ckeditor-widget": "^2.0",
+    "2amigos/yii2-ckeditor-widget": "~2.1",
     "mihaildev/yii2-elfinder": "^1.0",
     "trntv/yii2-aceeditor": "^2.0",
     "trntv/probe": "^1.0.0",
